--- a/portfolio.html
+++ b/portfolio.html
@@ -66,7 +66,29 @@
                     <li class="chapter">
                         <a href="#" class="galary">
                             <div class="img-product">
-                                <img src="./images/banking-app-interface-oncept.jpg" alt="Interface of banking app" width="360" height="300">
+                                <picture>
+                                    <source
+                                      srcset="./images/banking-app-pc.jpg 1x, ./images/banking-app-pc@2x.jpg 2x"
+                                      media="(min-width: 1200px)"
+                                    />
+                                    <source
+                                      srcset="
+                                        ./images/banking-app-tablet.jpg    1x,
+                                        ./images/banking-app-tablet@2x.jpg 2x
+                                      "
+                                      media="(min-width: 768px)"
+                                    />
+                                    <source
+                                      srcset="./images/banking-app-mob.jpg 1x, ./images/banking-app-mob@2x.jpg 2x"
+                                      media="(min-width: 320px)"
+                                    />
+                                    <img
+                                      class="img"
+                                      src="./images/banking-app-mob.jpg"
+                                      alt="Banking app"
+                                      loading="lazy"
+                                    />
+                                  </picture>
                                 <div class="card-product">
                                     <p class="card-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
                                         Exotic Fruit Ecommerce App ·
@@ -82,7 +104,26 @@
                     <li class="chapter">
                         <a href="#" class="galary">
                             <div class="img-product">
-                                <img src="./images/cashless-payment.jpg" alt="Reading QR-code" width="360" height="300">
+                                <picture>
+                                    <source
+                                      srcset="./images/cashless-pc.jpg 1x, ./images/cashless-pc@2x.jpg 2x"
+                                      media="(min-width: 1200px)"
+                                    />
+                                    <source
+                                      srcset="./images/cashless-tablet.jpg 1x, ./images/cashless-tablet@2x.jpg 2x"
+                                      media="(min-width: 768px)"
+                                    />
+                                    <source
+                                      srcset="./images/cashless-mob.jpg 1x, ./images/cashless-mob@2x.jpg 2x"
+                                      media="(min-width: 320px)"
+                                    />
+                                    <img
+                                      class="img"
+                                      src="./images/cashless-mob.jpg"
+                                      alt="Banking app"
+                                      loading="lazy"
+                                    />
+                                  </picture>
                                 <div class="card-product">
                                     <p class="card-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
                                         Exotic Fruit Ecommerce App ·
@@ -98,7 +139,35 @@
                     <li class="chapter">
                         <a href="#" class="galary">
                             <div class="img-product">
-                                <img src="./images/meditaion-app.jpg" alt="Screens of notebook and smartphone" width="360" height="300">
+                                <picture>
+                                    <source
+                                      srcset="
+                                        ./images/meditation-app-pc.jpg    1x,
+                                        ./images/meditation-app-pc@2x.jpg 2x
+                                      "
+                                      media="(min-width: 1200px)"
+                                    />
+                                    <source
+                                      srcset="
+                                        ./images/meditation-app-tablet.jpg    1x,
+                                        ./images/meditation-app-tablet@2x.jpg 2x
+                                      "
+                                      media="(min-width: 768px)"
+                                    />
+                                    <source
+                                      srcset="
+                                        ./images/meditation-app-mob.jpg    1x,
+                                        ./images/meditation-app-mob@2x.jpg 2x
+                                      "
+                                      media="(min-width: 320px)"
+                                    />
+                                    <img
+                                      class="img"
+                                      src="./images/meditation-app-mob.jpg"
+                                      alt="Banking app"
+                                      loading="lazy"
+                                    />
+                                  </picture>
                                 <div class="card-product">
                                     <p class="card-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
                                         Exotic Fruit Ecommerce App ·
@@ -114,7 +183,29 @@
                     <li class="chapter">
                         <a href="#" class="galary">
                             <div class="img-product">
-                                <img src="./images/taxi-service.jpg" alt="Driver's hands on the steering wheel" width="360" height="300">
+                                <picture>
+                                    <source
+                                      srcset="./images/taxi-service-pc.jpg 1x, ./images/taxi-service-pc@2x.jpg 2x"
+                                      media="(min-width: 1200px)"
+                                    />
+                                    <source
+                                      srcset="
+                                        ./images/taxi-service-tablet.jpg    1x,
+                                        ./images/taxi-service-tablet@2x.jpg 2x
+                                      "
+                                      media="(min-width: 768px)"
+                                    />
+                                    <source
+                                      srcset="./images/taxi-service-mob.jpg 1x, ./images/taxi-service-mob@2x.jpg 2x"
+                                      media="(min-width: 320px)"
+                                    />
+                                    <img
+                                      class="img"
+                                      src="./images/taxi-service-mob.jpg"
+                                      alt="Banking app"
+                                      loading="lazy"
+                                    />
+                                  </picture>
                                 <div class="card-product">
                                     <p class="card-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
                                         Exotic Fruit Ecommerce App ·
@@ -130,7 +221,26 @@
                     <li class="chapter">
                         <a href="#" class="galary">
                             <div class="img-product">
-                                <img src="./images/screen-illustrations.jpg" alt="Smartphon's wallpapers" width="360" height="300">
+                                <picture>
+                                    <source
+                                      srcset="./images/screen-pc.jpg 1x, ./images/screen-pc@2x.jpg 2x"
+                                      media="(min-width: 1200px)"
+                                    />
+                                    <source
+                                      srcset="./images/screen-tablet.jpg 1x, ./images/screen-tablet@2x.jpg 2x"
+                                      media="(min-width: 768px)"
+                                    />
+                                    <source
+                                      srcset="./images/screen-mob.jpg 1x, ./images/screen-mob@2x.jpg 2x"
+                                      media="(min-width: 320px)"
+                                    />
+                                    <img
+                                      class="img"
+                                      src="./images/screen-mob.jpg"
+                                      alt="Banking app"
+                                      loading="lazy"
+                                    />
+                                  </picture>
                                 <div class="card-product">
                                     <p class="card-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
                                         Exotic Fruit Ecommerce App ·
@@ -146,7 +256,35 @@
                     <li class="chapter">
                         <a href="#" class="galary">
                             <div class="img-product">
-                                <img src="./images/online-courses.jpg" alt="Woman whith headphones" width="360" height="300">
+                                <picture>
+                                    <source
+                                      srcset="
+                                        ./images/online-courses-pc.jpg    1x,
+                                        ./images/online-courses-pc@2x.jpg 2x
+                                      "
+                                      media="(min-width: 1200px)"
+                                    />
+                                    <source
+                                      srcset="
+                                        ./images/online-courses-tablet.jpg    1x,
+                                        ./images/online-courses-tablet@2x.jpg 2x
+                                      "
+                                      media="(min-width: 768px)"
+                                    />
+                                    <source
+                                      srcset="
+                                        ./images/online-courses-mob.jpg    1x,
+                                        ./images/online-courses-mob@2x.jpg 2x
+                                      "
+                                      media="(min-width: 320px)"
+                                    />
+                                    <img
+                                      class="img"
+                                      src="./images/online-courses-mob.jpg"
+                                      alt="Banking app"
+                                      loading="lazy"
+                                    />
+                                  </picture>
                                 <div class="card-product">
                                     <p class="card-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
                                         Exotic Fruit Ecommerce App ·
@@ -162,7 +300,26 @@
                     <li class="chapter">
                         <a href="#" class="galary">
                             <div class="img-product">
-                                <img src="./images/instagram-stories-concept.jpg" alt="Instagram stories options" width="360" height="300">
+                                <picture>
+                                    <source
+                                      srcset="./images/instagram-pc.jpg 1x, ./images/instagram-pc@2x.jpg 2x"
+                                      media="(min-width: 1200px)"
+                                    />
+                                    <source
+                                      srcset="./images/instagram-tablet.jpg 1x, ./images/instagram-tablet@2x.jpg 2x"
+                                      media="(min-width: 768px)"
+                                    />
+                                    <source
+                                      srcset="./images/instagram-mob.jpg 1x, ./images/instagram-mob@2x.jpg 2x"
+                                      media="(min-width: 320px)"
+                                    />
+                                    <img
+                                      class="img"
+                                      src="./images/instagram-mob.jpg"
+                                      alt="Banking app"
+                                      loading="lazy"
+                                    />
+                                  </picture>
                                 <div class="card-product">
                                     <p class="card-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
                                         Exotic Fruit Ecommerce App ·
@@ -178,7 +335,29 @@
                     <li class="chapter">
                         <a href="#" class="galary">
                             <div class="img-product">
-                                <img src="./images/organic-food.jpg" alt="Women with a bag of vegetables" width="360" height="300">
+                                <picture>
+                                    <source
+                                      srcset="./images/organic-food-pc.jpg 1x, ./images/organic-food-pc@2x.jpg 2x"
+                                      media="(min-width: 1200px)"
+                                    />
+                                    <source
+                                      srcset="
+                                        ./images/organic-food-tablet.jpg    1x,
+                                        ./images/organic-food-tablet@2x.jpg 2x
+                                      "
+                                      media="(min-width: 768px)"
+                                    />
+                                    <source
+                                      srcset="./images/organic-food-mob.jpg 1x, ./images/organic-food-mob@2x.jpg 2x"
+                                      media="(min-width: 320px)"
+                                    />
+                                    <img
+                                      class="img"
+                                      src="./images/organic-food-mob.jpg"
+                                      alt="Banking app"
+                                      loading="lazy"
+                                    />
+                                  </picture>
                                 <div class="card-product">
                                     <p class="card-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
                                         Exotic Fruit Ecommerce App ·
@@ -194,7 +373,29 @@
                     <li class="chapter">
                         <a href="#" class="galary">
                             <div class="img-product">
-                                <img src="./images/fresh-coffee.jpg" alt="Milk in coffee" width="360" height="300">
+                                <picture>
+                                    <source
+                                      srcset="./images/fresh-coffee-pc.jpg 1x, ./images/fresh-coffee-pc@2x.jpg 2x"
+                                      media="(min-width: 1200px)"
+                                    />
+                                    <source
+                                      srcset="
+                                        ./images/fresh-coffee-tablet.jpg    1x,
+                                        ./images/fresh-coffee-tablet@2x.jpg 2x
+                                      "
+                                      media="(min-width: 768px)"
+                                    />
+                                    <source
+                                      srcset="./images/fresh-coffee-mob.jpg 1x, ./images/fresh-coffee-mob@2x.jpg 2x"
+                                      media="(min-width: 320px)"
+                                    />
+                                    <img
+                                      class="img"
+                                      src="./images/fresh-coffee-mob.jpg"
+                                      alt="Banking app"
+                                      loading="lazy"
+                                    />
+                                  </picture>
                                 <div class="card-product">
                                     <p class="card-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
                                         Exotic Fruit Ecommerce App ·
