--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                                 ./images/team1-2x.jpg 2x"                     
                         src="./images/team1.jpg" alt="Mark Guerrero" width="264" height="260">
                         <div class="team-name">
-                            <h3 class="section-item">Mark Guerrero</h3>
+                            <h3 class="section-item trek">Mark Guerrero</h3>
                             <p class="item-description">Product Designer</p>
                             <ul class="team-link">
                                 <li class="team-social">
@@ -169,7 +169,7 @@
                                 ./images/team2-2x.jpg 2x"
                         src="./images/team2.jpg" alt="Tom Ford" width="264" height="260">
                         <div class="team-name">
-                            <h3 class="section-item">Tom Ford</h3>
+                            <h3 class="section-item trek">Tom Ford</h3>
                             <p class="item-description">Frontend Developer</p>
                             <ul class="team-link">
                                 <li class="team-social">
@@ -209,7 +209,7 @@
                                 ./images/team3-2x.jpg 2x"
                         src="./images/team3.jpg" alt="Camila Garcia" width="264" height="260">
                         <div class="team-name">
-                            <h3 class="section-item">Camila Garcia</h3>
+                            <h3 class="section-item trek">Camila Garcia</h3>
                             <p class="item-description">Marketing</p>
                             <ul class="team-link">
                                 <li class="team-social">
@@ -249,7 +249,7 @@
                                 ./images/team4-2x.jpg 2x"
                         src="./images/team4.jpg" alt="Daniel Wilson" width="264" height="260">
                         <div class="team-name">
-                            <h3 class="section-item">Daniel Wilson</h3>
+                            <h3 class="section-item trek">Daniel Wilson</h3>
                             <p class="item-description">UI Designer</p>
                             <ul class="team-link">
                                 <li class="team-social">
